<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">المنهج الأكاديمي</string>

    <!-- عامة -->
    <string name="action_ok">حسناً</string>
    <string name="action_cancel">إلغاء</string>
    <string name="action_retry">إعادة المحاولة</string>
    <string name="action_continue">متابعة</string>
    <string name="action_back">رجوع</string>

    <!-- مصادقة -->
    <string name="auth_login">تسجيل الدخول</string>
    <string name="auth_register">إنشاء حساب</string>
    <string name="auth_verify_email">تحقق البريد</string>
    <string name="auth_activation">تفعيل الكود</string>
    <string name="auth_forgot">نسيت كلمة المرور</string>
    <string name="auth_reset">إعادة التعيين</string>
    <string name="auth_resend_code">إعادة إرسال الرمز</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="forgot_password">نسيت كلمة المرور؟</string>
    <string name="create_account">إنشاء حساب جديد</string>
    <string name="verify_email_title">تفعيل البريد الإلكتروني</string>
    <string name="verify_email_desc">أرسلنا رابط تفعيل إلى بريدك. افتح الرابط ثم عُد للتطبيق.</string>
    <string name="open_email_app">فتح تطبيق البريد</string>
    <string name="i_have_verified">لقد ضغطت الرابط</string>
    <string name="resend_link">إعادة إرسال الرابط</string>
    <string name="home_title">الرئيسية</string>
    <string name="assets_title">المحتوى العام</string>
    <string name="contents_title">المحتوى الخاص</string>
    <string name="materials_title">المواد</string>
    <string name="profile_title">ملفي</string>
    <string name="material_details_title">تفاصيل المادة</string>
    <string name="doc_viewer_title">عرض الملف</string>
    <string name="doc_unknown">ملف بدون اسم</string>
    <string name="doc_viewer_hint">سيتم تنزيل الملف إلى مجلد التنزيلات وفتحه بتطبيق خارجي مناسب.</string>
    <string name="doc_download_open">تنزيل وفتح</string>
    <string name="title_materials">المواد</string>
    <string name="title_material_details">تفاصيل المادة</string>
    <string name="btn_open_assets_for_material">عرض المحتوى العام لهذه المادة</string>
    <string name="btn_open_contents_for_material">عرض المحتوى الخاص لهذه المادة</string>
    <string name="title_assets">المحتوى العام</string>
    <string name="title_contents">المحتوى الخاص</string>
    <string name="list_empty">لا توجد بيانات للعرض</string>
    <string name="filter_by_material_id">مادة#%1$s</string>
    <string name="filter_by_category">الفئة: %1$s</string>
    <string name="filter_by_type">النوع: %1$s</string>
    <string name="action_filter">تصفية</string>
    <string name="action_apply">تطبيق</string>
    <string name="action_clear">مسح الفلاتر</string>
    <string name="hint_material_id">رقم المادة (اختياري)</string>
    <string name="label_category">الفئة</string>
    <string name="label_type">النوع</string>
    <string name="filter_none">بدون</string>



</resources>
